# mspm0l1306-dev

./: CMakeLists.txt  Makefile  README.md  flake.nix
cmake/: toolchain.cmake
include/ti/devices/msp/peripherals/: hw_gpio.h
include/ti/motor_control_bldc_sensorless_foc/lib/ticlang/m0p/: FOC_Lib.lib
include/ti/motor_control_bldc_sensorless_foc/modules/IQmath/_IQNfunctions/: _IQNdiv_mathacl.c  _IQNdiv_mathacl.h  _IQNmpy_mathacl.c  _IQNmpy_mathacl.h  _IQNsqrt_mathacl.c
include/ti/motor_control_bldc_sensorless_foc/modules/IQmath/include/: IQmath_mathacl.h  iqNum.h  iqTrig.h
include/ti/motor_control_bldc_sensorless_foc/modules/IQmath/source/: iqNum.c  iqTrig.c
include/ti/motor_control_bldc_sensorless_foc/modules/appLib/appInterface/include/: appDefs.h  appInputCtrlInterface.h  appInterface.h  appUserInputs.h  appUserInputsConfig.h  appUserInputsInterface.h  appUserOutputs.h  motor.h  services.h  servicesHAL.h
include/ti/motor_control_bldc_sensorless_foc/modules/appLib/appInterface/source/: appUserInputsConfig.c  services.c  servicesHAL.c
include/ti/motor_control_bldc_sensorless_foc/modules/appLib/configTables/include/: configTables.h
include/ti/motor_control_bldc_sensorless_foc/modules/motorControlLib/include/: mcLib.h
include/ti/motor_control_bldc_sensorless_foc/modules/motorControlLib/source/: mcLib.c
include/ti/sasi_smoke_detector/lib/ticlang/m0p/: vchop_intchop.mak  vchop_intchop_n_int.mak
src/: main.c
startup/: priv.c
sysconfig/: ti_msp_dl_config.c  ti_msp_dl_config.h
(+32 files in other folders)
